--- a/#3 text_memo/#3-6 論理演算と論理回路.md
+++ b/#3 text_memo/#3-6 論理演算と論理回路.md
@@ -2,8 +2,8 @@
 出題で入力が4つのものもある。例えば、4入力のNAND回路とは、4つの入力がすべて1のとき0を、1つでも0があれば1を出力する回路です。多くの入力を持つ多入力回路では、入力が2つの論理回路を、入力の数だけ組み合わせた論理回路だと考えよう。
 
 # 用語
- - 論理和(OR)：どちらか一方でも、1なら1　→ A && B
- - 論理積(AND)：両方が1なら1　→ A || B
+ - 論理和(OR)：どちらか一方でも、1なら1　→ A || B
+ - 論理積(AND)：両方が1なら1　→ A && B
  - 否定(NOT)：0ならば1、1ならば0　→ !A、!B
  - 排他的論理和(XOR)：2つの値が異なっていれば答えが1　→ A ≠ B
  - 否定論理和(NOR)：論理和の逆で、どちらか一方でも1なら答えが0　→ !(A+B)　
