--- a/#4 コンピュータシステム/#4-4 システムの信頼性設計.md
+++ b/#4 コンピュータシステム/#4-4 システムの信頼性設計.md
@@ -3,7 +3,7 @@
  - フォールトトレラント：障害が発生しても稼働するような対策を取っておく
    - フェールセーフ：システムの安全性を重視する
    - フェールソフト：システムを稼働し続けることを重視する
-   - フェールプルーフ：誤った操作をしても、システムが壊れたり、危険なことにならないようにする
+   - フールプルーフ：誤った操作をしても、システムが壊れたり、危険なことにならないようにする
  - RAID0：データを分散して記録する(ストライピング) → アクセスの高速化
  - RAID1：別の磁気ディスクにも同じデータを書き込む（ミラーリング） → システムの高信頼化
  - RAID5：データとバリティ情報を分散して記録 → アクセスの高速化・システムの高信頼化
