システムテストについて学んだことを追記

--- a/#5 システム開発/#5-8 システムのテスト.md
+++ b/#5 システム開発/#5-8 システムのテスト.md
@@ -15,6 +15,34 @@
 ホワイトボックステストにおいて、コードの中のどれだけのの割合の部分を実行できたか評価するために行う分析
 
 ## ブラックボックステストにおけるテストデータの作成方法
- - 同値分析方法：データを種類ごとのグループに分け、各グループの代表値を使う
- - 境界値分析：グループの境目となる値を使う
+ - 同値分析方法：データを種類ごとのグループに分け、各グループの代表値を使う→その領域の1つの値
+ - 境界値分析：グループの境目となる値を使う→境界の2つの値
+
+# 結合テスト
+単体テストが終わった複数のモジュールを組み合わせ、正しく動作するかをテストする。モジュール間のデータのやり取りや、他のモジュールの呼び出しがうまく行っているか確認する。  
+ - ボトムアップテスト：下位モジュールから上位モジュールへ順にテストする。上位モジュールにドライバを使ってテスト。
+ - アップダウンテスト：上位のモジュールから下位のモジュールへ順にテスト。下位にはスタブと呼ばれる代用モジュールを使用する。
+
+# システムテスト
+結合テストが終了したらシステム全体をテストするシステムテストを行い、要求された仕様の通りにシステムが動作するかチェックする。
+
+## ストレステスト
+システムに要求された処理能力の限界状態の動作を確認するテスト
+
+# 運用テスト
+利用者に提供する視点で、システムが要求を満たしているかテスト
+
+## リグレッションテスト
+修正が他の部分に影響を及ぼしていないかテスト
+
+## 動的テストと静的テスト
+- 動的テスト：プログラムを動かして行うテスト。実際に動かすことで性能や使い勝手をテスト。
+- 静的テスト：プログラムを動かさずに行うテスト。ソースコードを解析してプログラムの誤りや脆弱性を検出。
+
+## 信頼度成長曲線
+テスト項目の消化件数と検出されたバグの件数を表したグラフ  
+十分なテストを行いバグが減ってきたらテスト終了の合図。
+
+# 移行テスト
+新システムへの切り替えて順や問題点を確認するテスト
 
