誤字修正と復習履歴追加

--- a/#7 ネットワーク/#7-4 インターネット.md
+++ b/#7 ネットワーク/#7-4 インターネット.md
@@ -20,7 +20,7 @@
 # 電子メールの仕組み
 電子メールの送信はSMTPを使い、届いたメールをメールサーバから取り出すにはPOP3が使われている
 
-## SMTO-AUTH
+## SMTP-AUTH
 メール送信時にメールサーバで送信者を認証
 
 ## MIME
@@ -28,3 +28,5 @@
 
 ## S/MIME
 電子メールの暗号化と署名が行える規格
+
+復習1
