--- a/#7 ネットワーク/#7-9 誤り制御.md
+++ b/#7 ネットワーク/#7-9 誤り制御.md
@@ -17,7 +17,7 @@
 # 垂直パリティと水平パリティ
  - 垂直パリティ:1文字ごとにパリティを加える
  - 水平パリティ:横方向のブロックごとにパリティを加える
- - 水平司直パリティ:垂直パリティと水平パリティを組みわせる
+ - 水平垂直パリティ:垂直パリティと水平パリティを組みわせる
 
 水平垂直パリティでは、２ビット以上の誤りがあったときに、誤りが検出できる場合とできない場合がある  
 検出できても位置が特定できるとは限らない
